# pedantagent

./: .gitignore  main.py  pyproject.toml
src/: agent.py  cli.py  config.py  web_client.py  words.py
src/pedantagent/: agent.py  cli.py  config.py  llm.py  web_client.py  words.py
